# WartID-client-rs

./: .gitignore  Cargo.toml  README.md
examples/rocket/: Cargo.toml  Rocket.toml
examples/rocket/src/: main.rs
src/: api.rs  handlers.rs  lib.rs  rocket.rs
