[package]
name = "wartid-client"
version = "0.1.0"
description = "A Rust client for WartID"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
edition = "2018"

[dependencies]
chrono = "0.4"
jsonwebtoken = "7.2"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "serde_json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8d4d01106e2e10b08100805d40bfa19a7357e900", optional = true, features = ["secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
time = "0.2"
uuid = { version = "0.8", features = ["serde"] }
